// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Pager /> should not render items 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  list-style-type: none;
  width: 100%;
  padding: 0;
}

.c0 > li {
  margin: 0 0.4rem;
}

<ul
    class="c0"
  />
</DocumentFragment>
`;

exports[`<Pager /> should render first page 1`] = `
<DocumentFragment>
  .c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border: none;
  color: currentColor;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: var(--font-family);
  outline: none;
  padding: 0;
  margin: 0;
}

.c3 {
  border-radius: 0.2rem;
  font-size: var(--font-size-smaller);
  line-height: 1.3333333;
  padding: 1.6rem;
  -webkit-transition: background 150ms ease-out;
  transition: background 150ms ease-out;
}

.c3 > svg {
  margin: 0 -0.4rem 0 0.4rem;
}

.c1 + .c1 {
  margin: 0 0 0 0.8rem;
}

.c4 {
  background: var(--secondary-normal);
  color: var(--text-normal);
}

.c4:hover {
  background: var(--secondary-darker);
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  list-style-type: none;
  width: 100%;
  padding: 0;
}

.c0 > li {
  margin: 0 0.4rem;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: var(--font-size-normal);
  height: 4.4rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0;
  width: 4.4rem;
}

<ul
    class="c0"
  >
    <li>
      <button
        class="c1 c2 c3 c4 c5"
        data-testid="next-page"
        title="Next page"
      >
        »
      </button>
    </li>
    <li>
      <button
        class="c1 c2 c3 c4 c5"
        data-testid="last-page"
        title="Last page"
      >
        »
      </button>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`<Pager /> should render last page 1`] = `
<DocumentFragment>
  .c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border: none;
  color: currentColor;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: var(--font-family);
  outline: none;
  padding: 0;
  margin: 0;
}

.c3 {
  border-radius: 0.2rem;
  font-size: var(--font-size-smaller);
  line-height: 1.3333333;
  padding: 1.6rem;
  -webkit-transition: background 150ms ease-out;
  transition: background 150ms ease-out;
}

.c3 > svg {
  margin: 0 -0.4rem 0 0.4rem;
}

.c1 + .c1 {
  margin: 0 0 0 0.8rem;
}

.c4 {
  background: var(--secondary-normal);
  color: var(--text-normal);
}

.c4:hover {
  background: var(--secondary-darker);
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  list-style-type: none;
  width: 100%;
  padding: 0;
}

.c0 > li {
  margin: 0 0.4rem;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: var(--font-size-normal);
  height: 4.4rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0;
  width: 4.4rem;
}

<ul
    class="c0"
  >
    <li>
      <button
        class="c1 c2 c3 c4 c5"
        data-testid="first-page"
        title="First page"
      >
        ««
      </button>
    </li>
    <li>
      <button
        class="c1 c2 c3 c4 c5"
        data-testid="previous-page"
        title="Previous page"
      >
        «
      </button>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`<Pager /> should render second page 1`] = `
<DocumentFragment>
  .c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border: none;
  color: currentColor;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: var(--font-family);
  outline: none;
  padding: 0;
  margin: 0;
}

.c3 {
  border-radius: 0.2rem;
  font-size: var(--font-size-smaller);
  line-height: 1.3333333;
  padding: 1.6rem;
  -webkit-transition: background 150ms ease-out;
  transition: background 150ms ease-out;
}

.c3 > svg {
  margin: 0 -0.4rem 0 0.4rem;
}

.c1 + .c1 {
  margin: 0 0 0 0.8rem;
}

.c4 {
  background: var(--secondary-normal);
  color: var(--text-normal);
}

.c4:hover {
  background: var(--secondary-darker);
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  list-style-type: none;
  width: 100%;
  padding: 0;
}

.c0 > li {
  margin: 0 0.4rem;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: var(--font-size-normal);
  height: 4.4rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0;
  width: 4.4rem;
}

<ul
    class="c0"
  >
    <li>
      <button
        class="c1 c2 c3 c4 c5"
        data-testid="first-page"
        title="First page"
      >
        ««
      </button>
    </li>
    <li>
      <button
        class="c1 c2 c3 c4 c5"
        data-testid="previous-page"
        title="Previous page"
      >
        «
      </button>
    </li>
    <li>
      <button
        class="c1 c2 c3 c4 c5"
        data-testid="next-page"
        title="Next page"
      >
        »
      </button>
    </li>
    <li>
      <button
        class="c1 c2 c3 c4 c5"
        data-testid="last-page"
        title="Last page"
      >
        »
      </button>
    </li>
  </ul>
</DocumentFragment>
`;
